--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -454,10 +454,11 @@ h1 {
     height: fit-content;
     width: 50vw;
     padding: 1%;
-    background-color: #C0D966;
+    background-color: #22252E;
     z-index: 1000;
     border: 1px black solid;
     border-radius: 5px;
+    color: lightgray;
 }
 
 .add-camera-menu-cancel {
@@ -484,6 +485,7 @@ h1 {
     height: fit-content;
     justify-content: space-evenly;
     padding-bottom: 2%;
+    color:black
 }
 
 .add-camera-plans-free {
@@ -718,6 +720,7 @@ input:checked+.slider:after {
     margin-bottom: 2%;
     width: 100%;
     z-index: 90;
+    color: lightgray;
 }
 
 .add-camera-menu-title h1 {
