--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -1364,7 +1364,6 @@ table {
     height: 25vh;
     overflow-x: auto;
     margin-top: 0px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .tbl-content-large {
@@ -1568,8 +1567,8 @@ td:hover{
     display: flex;
     flex-direction: column;
     width: 95%;
-    height: 97%;
-    background-color: #22252E;
+    max-width: 95%;
+    height: 97%; 
     color: lightgray;
     border-radius: 5px;
 }
@@ -1578,7 +1577,7 @@ td:hover{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 97%;
+    height: fit-content;
     background-color: #22252E;
     color: lightgray;
     border-radius: 5px;
@@ -1638,17 +1637,21 @@ td:hover{
     margin-right: 5px;
 }
 
-.panel-camera-settings-endpoint{
+.panel-camera-settings-endpoint {
     width: 100%;
+    max-width: 300px;
+    height: fit-content;
     padding: 1%;
-    overflow-y: auto;
 }
 
-#endpoint{
+#endpoint {
     background-color: white;
     color: black;
     border-radius: 5px;
-    width: 95%;
+    width: 100%; /* Calculate width with padding subtracted */
+    max-width: 100%;
+    overflow-x: auto; /* Enable horizontal scrolling */
+    white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .panel-camera-settings-endpoint-link {
@@ -1735,7 +1738,8 @@ div.panel-camera-settings-overview-stats-body div {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 1%;
+    height: 50%;
+    overflow-y: auto;
 }
 
 #cameraLogs{
@@ -1745,7 +1749,26 @@ div.panel-camera-settings-overview-stats-body div {
 #cameraLogs-header{
     color: black;
     background-color: #C5D97E;
-    border: 1px #C5D97E solid;
+    border: 1px solid #C5D97E;
+}
+
+#cameraLogs-body {
+    width: 100%;
+    height: 50%;
+    background-color: red;
+    overflow-y: auto;
+}
+
+#cameraLogs .tbl-content {
+    height: 25vh;
+    max-height: 100px;
+    overflow-y: auto;
+    color: white;
+}
+
+#cameraLogs .tbl-content tr:hover{
+    background-color: lightgrey;
+    color:black
 }
 
 .panel-camera-settings-save{
