--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -1577,7 +1577,7 @@ td:hover{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: fit-content;
+    height: 97%;
     background-color: #22252E;
     color: lightgray;
     border-radius: 5px;
@@ -1673,11 +1673,26 @@ div.panel-camera-settings-endpoint-link p {
     width: 50%;
 }
 
-.panel-camera-settings-sensitivity p{
-    background-color: white;
-    color: black;
-    border-radius: 5px;
+.sensitivity-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; /* Adjust as needed */
 }
+
+#sensitivity {
+    margin: 0;
+    width: fit-content;
+    padding-right: 5px;
+    background-color: white;
+    border-radius: 5px;
+    color: black;
+}
+
+.sensitivity-container span {
+    padding-left: 5px; /* Optional: space between number and % symbol */
+}
+
 
 .panel-camera-settings-overview {
     display: flex;
@@ -1739,24 +1754,31 @@ div.panel-camera-settings-overview-stats-body div {
     flex-direction: column;
     width: 100%;
     height: 50%;
-    overflow-y: auto;
 }
 
 #cameraLogs{
+    display: flex;
+    flex-direction: column;
     border: 1px #C5D97E solid;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    overflow-y: auto;
 }
 
 #cameraLogs-header{
     color: black;
     background-color: #C5D97E;
     border: 1px solid #C5D97E;
+    width: 3%;
 }
 
 #cameraLogs-body {
     width: 100%;
     height: 50%;
-    background-color: red;
+    background: none;
     overflow-y: auto;
+    background-color: blue;
 }
 
 #cameraLogs .tbl-content {
