--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -839,6 +839,34 @@ input:checked+.slider:after {
 
 /*###################################################*/
 
+/*################# Livefeed #################*/
+
+#live-feed-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    position: fixed;
+    top: 27%;
+    left: 50%;
+    transform: translate(-50%, -12.85vh);
+    width: fit-content;
+    height: fit-content;
+    z-index: 1000;
+    background-color: #C0D966;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1%;
+    color: black;
+}
+  
+#hls-video{
+    display: flex;
+    width: 95%;
+}
+
+/*###################################################*/
+
 /*################# SOCIAL NETWORK #################*/
 
 .social-network {
