--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -288,7 +288,7 @@ h1 {
 .menu-options-home-upload-text {
     display: flex;
     justify-content: start;
-    align-items: center;    
+    align-items: center;
     color: #F2F2F2;
 
     /*Animation*/
@@ -508,7 +508,7 @@ h1 {
     height: fit-content;
     justify-content: space-evenly;
     padding-bottom: 2%;
-    color:black
+    color: black
 }
 
 .add-camera-plans-free {
@@ -848,14 +848,13 @@ input:checked+.slider:after {
 #live-feed-container {
     display: none;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     position: fixed;
     top: 27%;
     left: 50%;
     transform: translate(-50%, -12.85vh);
-    width: fit-content;
-    height: fit-content;
+    width: 60%;
     z-index: 1000;
     background-color: #C0D966;
     border: 1px solid black;
@@ -871,7 +870,7 @@ input:checked+.slider:after {
     animation-delay: 0.1s
 }
 
-#live-feed-container-title{
+#live-feed-container-title {
     display: flex;
     height: 50%;
     width: 100%;
@@ -879,7 +878,7 @@ input:checked+.slider:after {
     font-weight: normal;
 }
 
-#cancel-btn{
+#cancel-btn {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -900,11 +899,11 @@ input:checked+.slider:after {
     cursor: pointer;
     color: black;
 }
-  
+
 #hls-video {
     width: 100%;
-    height: auto; 
-    max-width: 100%; 
+    height: auto;
+    max-width: 100%;
 }
 
 /*###################################################*/
@@ -921,7 +920,7 @@ input:checked+.slider:after {
     position: relative;
 }
 
-.social-network-made-by{
+.social-network-made-by {
     color: #F2F2F2;
     font-size: 70%;
     position: absolute;
@@ -937,7 +936,7 @@ input:checked+.slider:after {
     animation: fadeInAnimation ease-in 1;
     animation-fill-mode: forwards;
     animation-duration: 0.4s;
-    
+
 }
 
 .social-network-image {
@@ -1536,7 +1535,7 @@ th {
     text-transform: uppercase;
 }
 
-th:hover{
+th:hover {
     cursor: pointer;
 }
 
@@ -1549,21 +1548,21 @@ td {
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
-td:hover{
+td:hover {
     cursor: pointer;
 }
 
-#dynamicListCamera-dashboard-last-detection tr{
+#dynamicListCamera-dashboard-last-detection tr {
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
     background-color: #22252E;
     color: white;
 }
 
-#dynamicListCamera-dashboard-last-detection tr:hover{
+#dynamicListCamera-dashboard-last-detection tr:hover {
     background-color: gray;
 }
 
-#searchMyCameras tr{
+#searchMyCameras tr {
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
@@ -1587,11 +1586,11 @@ td:hover{
 }
 
 
-#dynamicListCamera-dashboard tr{
+#dynamicListCamera-dashboard tr {
     color: black;
 }
 
-#dynamicListCamera-dashboard tr:hover{
+#dynamicListCamera-dashboard tr:hover {
     background-color: gray;
 }
 
@@ -1708,7 +1707,7 @@ td:hover{
     margin: 1%;
 }
 
-#panel-mycamera-details{
+#panel-mycamera-details {
     display: none;
     justify-content: space-between;
     justify-content: center;
@@ -1722,12 +1721,12 @@ td:hover{
     flex-direction: column;
     width: 95%;
     max-width: 95%;
-    height: 97%; 
+    height: 97%;
     color: lightgray;
     border-radius: 5px;
 }
 
-.panel-camera-settings-container{
+.panel-camera-settings-container {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -1737,14 +1736,14 @@ td:hover{
     border-radius: 5px;
 }
 
-.panel-camera-settings button{
+.panel-camera-settings button {
     background-color: lightgray;
-    border:none;
+    border: none;
     border-radius: 5px;
     color: black;
 }
 
-.panel-camera-settings button:hover{
+.panel-camera-settings button:hover {
     background-color: gray;
     color: white;
 }
@@ -1757,16 +1756,18 @@ td:hover{
     padding: 1%;
     border-bottom: 1px white solid;
 }
-.panel-camera-settings-header h3{
+
+.panel-camera-settings-header h3 {
     width: 50%;
     border-radius: 5px;
 }
+
 .panel-camera-settings-edit {
     display: flex;
     align-items: center;
 }
 
-.panel-camera-settings-body{
+.panel-camera-settings-body {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -1783,7 +1784,7 @@ td:hover{
     border-right: 1px gray solid;
 }
 
-.panel-camera-settings-subscription-header{
+.panel-camera-settings-subscription-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1802,10 +1803,13 @@ td:hover{
     background-color: white;
     color: black;
     border-radius: 5px;
-    width: 100%; /* Calculate width with padding subtracted */
+    width: 100%;
+    /* Calculate width with padding subtracted */
     max-width: 100%;
-    overflow-x: auto; /* Enable horizontal scrolling */
-    white-space: nowrap; /* Prevent text from wrapping */
+    overflow-x: auto;
+    /* Enable horizontal scrolling */
+    white-space: nowrap;
+    /* Prevent text from wrapping */
 }
 
 .panel-camera-settings-endpoint-link {
@@ -1831,7 +1835,8 @@ div.panel-camera-settings-endpoint-link p {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%; /* Adjust as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
 
 #sensitivity {
@@ -1844,7 +1849,8 @@ div.panel-camera-settings-endpoint-link p {
 }
 
 .sensitivity-container span {
-    padding-left: 5px; /* Optional: space between number and % symbol */
+    padding-left: 5px;
+    /* Optional: space between number and % symbol */
 }
 
 
@@ -1873,7 +1879,7 @@ div.panel-camera-settings-overview-stats-body div {
     width: 55%;
 }
 
-.panel-camera-settings-overview-currentstatus{
+.panel-camera-settings-overview-currentstatus {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1882,11 +1888,11 @@ div.panel-camera-settings-overview-stats-body div {
     border-right: 1px gray solid;
 }
 
-.panel-camera-settings-overview-currentstatus h3{
+.panel-camera-settings-overview-currentstatus h3 {
     color: green;
 }
 
-.panel-camera-settings-overview-stats{
+.panel-camera-settings-overview-stats {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1903,14 +1909,14 @@ div.panel-camera-settings-overview-stats-body div {
     text-align: center;
 }
 
-.panel-camera-settings-logs{
+.panel-camera-settings-logs {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 50%;
 }
 
-#cameraLogs{
+#cameraLogs {
     display: flex;
     flex-direction: column;
     border: 1px #C5D97E solid;
@@ -1920,7 +1926,7 @@ div.panel-camera-settings-overview-stats-body div {
     overflow-y: auto;
 }
 
-#cameraLogs-header{
+#cameraLogs-header {
     color: black;
     background-color: #C5D97E;
     border: 1px solid #C5D97E;
@@ -1942,23 +1948,23 @@ div.panel-camera-settings-overview-stats-body div {
     color: white;
 }
 
-#cameraLogs .tbl-content tr:hover{
+#cameraLogs .tbl-content tr:hover {
     background-color: lightgrey;
-    color:black
+    color: black
 }
 
-.panel-camera-settings-save{
+.panel-camera-settings-save {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 5%;
 }
 
-.panel-camera-settings-save button{
+.panel-camera-settings-save button {
     padding: 5%;
 }
 
-.panel-camera-settings-save button:hover{
+.panel-camera-settings-save button:hover {
     background-color: #C5D97E;
     color: black;
 }
@@ -2626,12 +2632,6 @@ select {
     display: block;
 }
 
-.live-feed-container-yolo{
-    max-width: 100%;
-}
-
-
-
 @media only screen and (max-width: 968px) {
 
     /*################# SIDEBAR #################*/
@@ -2696,7 +2696,7 @@ select {
 
     /*HEADER*/
 
-    .header-options{
+    .header-options {
         width: 100%;
     }
 
@@ -2722,19 +2722,19 @@ select {
         /* background-color: #f2f2f2; */
     }
 
-    .header-options-leave img{
-        height: 100%; 
+    .header-options-leave img {
+        height: 100%;
         width: 100%;
     }
-    
-    .header-options-leave p{
+
+    .header-options-leave p {
         display: none;
     }
 
-    .header-greeting{
+    .header-greeting {
         display: none;
     }
-    
+
     .header-options-addcamera button {
         color: transparent;
         background-position: center;
@@ -2742,13 +2742,13 @@ select {
         background-image: url("../Images/addcameraicon.png");
         background-size: 65%;
     }
-    
+
     .header-options-addcamera button:hover {
         color: transparent;
         background-color: #C0D966;
         cursor: pointer;
     }
-    
+
     .header-options-leave {
         font-size: 1.5vw;
     }
@@ -2793,28 +2793,28 @@ select {
         font-size: 1.5vw;
     }
 
-    .panel-information-statistics-status-online-container-label{
+    .panel-information-statistics-status-online-container-label {
         font-size: x-large;
     }
 
-    .panel-information-statistics-status-offline-container-label{
+    .panel-information-statistics-status-offline-container-label {
         font-size: x-large;
     }
 
 
-    .panel-information-statistics-smoke-24-hours-label{
+    .panel-information-statistics-smoke-24-hours-label {
         font-size: x-large;
     }
 
-    .panel-information-statistics-smoke-7-days-label{
+    .panel-information-statistics-smoke-7-days-label {
         font-size: x-large;
     }
 
-    .panel-information-statistics-smoke-30-days-label{
+    .panel-information-statistics-smoke-30-days-label {
         font-size: x-large;
     }
 
-    .tbl-header{
+    .tbl-header {
         font-size: xx-large;
     }
 
@@ -2823,13 +2823,13 @@ select {
         font-size: 0.6rem;
     }
 
-    .social-network{
+    .social-network {
         display: none;
     }
 
     /*PANEL - ADD CAMERA*/
 
-    .add-camera-menu-title{
+    .add-camera-menu-title {
         font-size: small;
     }
 
@@ -2838,11 +2838,11 @@ select {
         width: 80vw;
     }
 
-    .add-camera-plans{
+    .add-camera-plans {
         font-size: small;
     }
 
-    .add-camera-options-confirmations{
+    .add-camera-options-confirmations {
         font-size: small;
     }
 
@@ -2861,8 +2861,8 @@ select {
         width: 15vw;
     }
 
-    #live-feed-container{
-        width: 95%;
+    #live-feed-container {
+        width: 60%;
     }
 
 
@@ -2874,36 +2874,38 @@ select {
 
     /* CONTACTS */
 
-    .panel-add-contacts-addbutton{
+    .panel-add-contacts-addbutton {
         width: 50%;
     }
 
-    .panel-add-contacts-addbutton button{
+    .panel-add-contacts-addbutton button {
         width: 100%;
     }
 
-    .panel-add-contacts{
+    .panel-add-contacts {
         height: 50%;
     }
 
-    .panel-show-contacts-searchbar{
+    .panel-show-contacts-searchbar {
         width: 50%;
     }
 
-    .panel-account-search{
+    .panel-account-search {
         width: 100%;
     }
 
     /*################# AUTH #################*/
 
-    .header-auth-logo{
+    .header-auth-logo {
         display: none;
     }
 
-    #form-register, #form-login {
+    #form-register,
+    #form-login {
         width: 100%;
     }
-    #form-login.panel-auth-container-register{
+
+    #form-login.panel-auth-container-register {
         width: 100%;
     }
 
