--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -7,6 +7,47 @@ Colors for wireframe:
 #22252E -> Blue Black
 */
 
+/* CSS for the loading screen */
+#loading-screen {
+    display: none;
+    /* Initially hidden */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+/* Style the spinner */
+.spinner {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid #ccc;
+    border-top-color: #333;
+    animation: spin 1s infinite linear;
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* Style the message */
+.loading-message {
+    font-size: 18px;
+    color: #333;
+}
+
 /*################# MAIN #################*/
 
 @font-face {
@@ -60,7 +101,6 @@ h1 {
 .main {
     width: 100vw;
     height: 100vh;
-    display: flex;
 }
 
 .main-body {
@@ -1983,6 +2023,14 @@ div.panel-camera-settings-endpoint-link p {
     margin-left: 5px;
     margin-right: 5px;
     padding: 1%;
+}
+
+.panel-camera-settings-auth {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .panel-camera-settings-overview-stats-body {
